// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Updater updateHistory should add correct history item 1`] = `
<div>
  <li
    class="history__row"
  >
    <span
      class="history__item"
    >
      1
    </span>
    <span
      class="history__item"
    >
      +
    </span>
    <span
      class="history__item"
    >
      2
    </span>
    <span
      class="history__item history__item--correct"
    >
      3
    </span>
  </li>
</div>
`;

exports[`Updater updateHistory should add wrong history item 1`] = `
<div>
  <li
    class="history__row"
  >
    <span
      class="history__item"
    >
      1
    </span>
    <span
      class="history__item"
    >
      +
    </span>
    <span
      class="history__item"
    >
      2
    </span>
    <span
      class="history__item history__item--wrong"
    >
      4
    </span>
    <span
      class="history__item history__item--correct"
    >
      (3)
    </span>
  </li>
  <li
    class="history__row"
  >
    <span
      class="history__item"
    >
      1
    </span>
    <span
      class="history__item"
    >
      +
    </span>
    <span
      class="history__item"
    >
      2
    </span>
    <span
      class="history__item history__item--correct"
    >
      3
    </span>
  </li>
</div>
`;
